# whisper-local-stt

./: .gitignore  README.md  config.example.toml  pyproject.toml  start.bat
scripts/: generate_icons.py
src/whisper_stt/: __init__.py  __main__.py  app.py  audio.py  config.py  feedback.py  hotkey.py  injector.py  settings_gui.py  transcriber.py  tray.py
tests/: hotkey_result.txt  manual_test.py  test_hotkey.py
